--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,29 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Document</title>
-  <link href="style.css" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-<fieldset>
-  <legend>Login</legend>
-  <input id="emailCrd" placeholder="Email" type="email"/>
-  <input id="passwordCrd" placeholder="Password" type="password"/>
-  <button id="loginBtn" onclick="login(emailCrd.value,passwordCrd.value)">
-    Login
-  </button>
-  <button id="logoutBtn" onclick="logout()">Logout</button>
-</fieldset>
-<div id="test">
-  <button id="testBtn" onclick="test()">test</button>
-</div>
-<p id="successMsg"></p>
-<p id="errorMsg"></p>
-<script src="models.js"></script>
-<script src="util.js"></script>
-<script src="auth.js"></script>
+
 </body>
 </html>
