--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Index</h1>
+    <a href="/login">Login</a>
+    <a href="/register">Register</a>
 
 </body>
 </html>
